InsuranceOrg/force-app/main/default/objects/vlocity_ins__FinancialSecurity__c/fields/vlocity_ins__AssetSubClass__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AssetSubClass__c</fullName>
    <label>Asset Sub Class</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>vlocity_ins__AssetClass__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>Small</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>