InsuranceOrg/force-app/main/default/objects/vlocity_ins__FinancialSecurity__c/fields/vlocity_ins__Price__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Price__c</fullName>
    <description>The security price</description>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>