InsuranceOrg/force-app/main/default/objects/vlocity_ins__FinancialSecurity__c/fields/vlocity_ins__PriceAsOfDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PriceAsOfDate__c</fullName>
    <description>The date/time of the security price</description>
    <label>As of Date</label>
    <type>DateTime</type>
</CustomField>