InsuranceOrg/force-app/main/default/objects/vlocity_ins__FinancialSecurity__c/fields/vlocity_ins__Rating__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Rating__c</fullName>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buy</fullName>
            </value>
            <value>
                <fullName>Sell</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>