InsuranceOrg/force-app/main/default/objects/vlocity_ins__FinancialSecurity__c/fields/vlocity_ins__SecurityIdentifier__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SecurityIdentifier__c</fullName>
    <description>Security identifier. CUSIP (9 character alphanumerical code for US and Canadian stocks), SEDOL (7 character alphanumerical code for UK securities that are not traded in US), ISIN (12 character alphanumerical code to identify bonds, commercial paper, equities, warrants and most of the listed derivatives), RIC is used by Reuters to identify financial instruments and indices.</description>
    <externalId>true</externalId>
    <label>Security Identifier</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>