InsuranceOrg/force-app/main/default/objects/vlocity_ins__FinancialSecurity__c/fields/vlocity_ins__SecurityIdentifierType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SecurityIdentifierType__c</fullName>
    <label>Security Identifier Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CUSIP</fullName>
            </value>
            <value>
                <fullName>SEDOL</fullName>
            </value>
            <value>
                <fullName>RIC</fullName>
            </value>
            <value>
                <fullName>ISIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>