InsuranceOrg/force-app/main/default/objects/vlocity_ins__FinancialSecurity__c/listViews/vlocity_ins__All.listView-meta.xml
<ListView>
    <fullName>vlocity_ins__All</fullName>
    <columns>NAME</columns>
    <columns>vlocity_ins__TickerSymbol__c</columns>
    <columns>vlocity_ins__SecurityType__c</columns>
    <columns>vlocity_ins__AssetClass__c</columns>
    <columns>vlocity_ins__AssetSubClass__c</columns>
    <columns>vlocity_ins__IsApproved__c</columns>
    <columns>vlocity_ins__Rating__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>